--- a/src/lambda-functions/material/material.yaml
+++ b/src/lambda-functions/material/material.yaml
@@ -124,6 +124,35 @@ Resources:
                 - "rds:*"
               Resource: "*"
 
+  GetMaterialFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: get
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /material/{id}
+            Method: delete
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
+
   SearchMaterialByNameFunction:
     Type: AWS::Serverless::Function
     Properties:
