--- a/src/lambda-functions/material/material.yaml
+++ b/src/lambda-functions/material/material.yaml
@@ -127,7 +127,7 @@ Resources:
   GetMaterialFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: get
+      CodeUri: get-paging
       Handler: app.lambda_handler
       Runtime: python3.8
       Layers:
@@ -144,7 +144,7 @@ Resources:
           Properties:
             RestApiId: !Ref MyApi
             Path: /material/{id}
-            Method: delete
+            Method: get
       Policies:
         - Version: "2012-10-17"
           Statement:
