--- a/src/lambda-functions/material-warehouse/material-warehouse.yaml
+++ b/src/lambda-functions/material-warehouse/material-warehouse.yaml
@@ -85,7 +85,7 @@ Resources:
           Type: Api
           Properties:
             RestApiId: !Ref MyApi
-            Path: /material-warehouse/{inport_material_id}/{material_id}
+            Path: /material-warehouse/{import_material_id}/{material_id}
             Method: delete
       Policies:
         - Version: "2012-10-17"
@@ -114,8 +114,37 @@ Resources:
           Type: Api
           Properties:
             RestApiId: !Ref MyApi
-            Path: /material-warehouse/{inport_material_id}/{material_id}
-            Method: update
+            Path: /material-warehouse/{import_material_id}/{material_id}
+            Method: post
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
+
+  GetMaterialByImportIdFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: get-by-import-id
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /material-warehouse/{import_material_id}
+            Method: get
       Policies:
         - Version: "2012-10-17"
           Statement:
