--- a/src/lambda-functions/material-warehouse/material-warehouse.yaml
+++ b/src/lambda-functions/material-warehouse/material-warehouse.yaml
@@ -95,7 +95,7 @@ Resources:
                 - "rds:*"
               Resource: "*"
 
-  UpdateMaterialFunction:
+  UpdateMaterialInWarehouseFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: update
