--- a/src/lambda-functions/material-warehouse/material-warehouse.yaml
+++ b/src/lambda-functions/material-warehouse/material-warehouse.yaml
@@ -181,3 +181,32 @@ Resources:
               Action:
                 - "rds:*"
               Resource: "*"
+
+  GetMaterialByRemainingFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: get-by-material-id
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /material-warehouse/material-id/{id}
+            Method: get
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
