--- a/src/integrated-resource/timekeeping.yaml
+++ b/src/integrated-resource/timekeeping.yaml
@@ -39,7 +39,7 @@ Resources:
     Type: "AWS::ApiGateway::Resource"
     Properties:
       RestApiId: !Ref Api
-      ParentId: !Ref TimekeepingResource
+      ParentId: !Ref StartTimeResource
       PathPart: "{end-time}"
   
   TimekeepingMethodPost:
