--- a/src/integrated-resource/integrated-resource.yaml
+++ b/src/integrated-resource/integrated-resource.yaml
@@ -91,3 +91,17 @@ Resources:
         InteCognitoAuthorizer: !Ref InteCognitoAuthorizer
         ApiRootResourceId: !GetAtt Api.RootResourceId
         APIGatewayIntegreatedRoleArn: !GetAtt APIGatewayIntegreatedRole.Arn
+
+  MessageStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./message.yaml
+      Parameters:
+        StageName: !Ref StageName
+        AppName: !Ref AppName
+        UserPoolArn: !Ref UserPoolArn
+        TableName: !Ref TableName
+        Api: !Ref Api
+        InteCognitoAuthorizer: !Ref InteCognitoAuthorizer
+        ApiRootResourceId: !GetAtt Api.RootResourceId
+        APIGatewayIntegreatedRoleArn: !GetAtt APIGatewayIntegreatedRole.Arn
