--- a/src/lambda-functions/paid-material-usage/paid-material-usage.yaml
+++ b/src/lambda-functions/paid-material-usage/paid-material-usage.yaml
@@ -65,3 +65,32 @@ Resources:
               Action:
                 - "rds:*"
               Resource: "*"
+
+  GetByExaminationIdFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: get-by-examination-id
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /paid-material-usage/examination/{id}
+            Method: get
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
