--- a/src/integrated-resource/appointment.yaml
+++ b/src/integrated-resource/appointment.yaml
@@ -93,7 +93,7 @@ Resources:
               method.response.header.Access-Control-Allow-Headers: "'Access-Control-Allow-Headers, Access-Control-Allow-Methods, Accept, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
               method.response.header.Access-Control-Allow-Credentials: "'true'"
-              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST,PUT,PATCH,GET,DELETE'"
+              method.response.header.Access-Control-Allow-Methods: "'POST'"
             ResponseTemplates:
               application/json: "{}"
           - StatusCode: "400"
@@ -143,6 +143,11 @@ Resources:
             "Fn::Sub": '{"TableName":"${TableName}","KeyConditionExpression":"#type_alias=:v1 AND epoch BETWEEN :startTime AND :endTime","ExpressionAttributeValues":{":v1":{"S":"a"},":startTime":{"N":"$util.urlDecode($input.params(''start-time''))"},":endTime":{"N":"$util.urlDecode($input.params(''end-time''))"}},"ExpressionAttributeNames":{"#type_alias":"type"}}'
         IntegrationResponses:
           - StatusCode: "200"
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Access-Control-Allow-Headers, Access-Control-Allow-Methods, Accept, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Credentials: "'true'"
+              method.response.header.Access-Control-Allow-Methods: "'GET'"
             ResponseTemplates:
               application/json: |
                 #set($inputRoot = $input.path('$'))[#foreach($item in $inputRoot.Items)#set($grouped = {})#set($counts = {})#foreach($key in $item.keySet())#if($key != "type" && $key != "epoch")#if(!$grouped.containsKey($item[$key].M.procedure.N))#set($grouped[$item[$key].M.procedure.N] = [])#set($counts[$item[$key].M.procedure.N] = 0)#end#set($appointment = {"appointment_id": "$key","patient_id": "$util.escapeJavaScript($item[$key].M.patient_id.S)","patient_name":"$util.escapeJavaScript($item[$key].M.patient_name.S)","phone_number": "$util.escapeJavaScript($item[$key].M.phone_number.S)","procedure": $item[$key].M.procedure.N,"doctor": "$util.escapeJavaScript($item[$key].M.doctor.S)","time": $item[$key].M.time.N,"attribute_name": "$util.escapeJavaScript($item[$key].M.attribute_name.S)","epoch": $item[$key].M.epoch.N,"migrated": $item[$key].M.migrated.BOOL})#set($discard = $grouped[$item[$key].M.procedure.N].add($appointment))#set($counts[$item[$key].M.procedure.N] = $counts[$item[$key].M.procedure.N] + 1)#end#end{"date": $item.epoch.N,"appointments": [#foreach($procKey in $grouped.keySet()){"procedure": $procKey,"count": $counts[$procKey],"details": $grouped[$procKey]}#if($foreach.hasNext),#end#end]}#if($foreach.hasNext),#end#end]
@@ -156,6 +161,11 @@ Resources:
               application/json: '{"error":"Internal server error"}'
       MethodResponses:
         - StatusCode: "200"
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Credentials: true
+            method.response.header.Access-Control-Allow-Methods: true
         - StatusCode: "400"
           ResponseModels:
             application/json: "Error"
@@ -279,6 +289,11 @@ Resources:
               - TableName: !Ref TableName
         IntegrationResponses:
           - StatusCode: "200"
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Access-Control-Allow-Headers, Access-Control-Allow-Methods, Accept, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Credentials: "'true'"
+              method.response.header.Access-Control-Allow-Methods: "'PUT'"
             ResponseTemplates:
               application/json: "{}"
           - StatusCode: "400"
@@ -291,6 +306,11 @@ Resources:
               application/json: '{"error":"Internal server error"}'
       MethodResponses:
         - StatusCode: "200"
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Credentials: true
+            method.response.header.Access-Control-Allow-Methods: true
         - StatusCode: "400"
           ResponseModels:
             application/json: "Error"
