--- a/src/integrated-resource/message.yaml
+++ b/src/integrated-resource/message.yaml
@@ -58,6 +58,11 @@ Resources:
             "Fn::Sub": '{"TableName":"${TableName}","KeyConditionExpression":"#type_alias=:v1 AND epoch BETWEEN :startTime AND :endTime","ExpressionAttributeValues":{":v1":{"S":"m"},":startTime":{"N":"$util.urlDecode($input.params(''epoch'') - 43200)"},":endTime":{"N":"$util.urlDecode($input.params(''epoch''))"}},"ExpressionAttributeNames":{"#type_alias":"type"}}'
         IntegrationResponses:
           - StatusCode: "200"
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Access-Control-Allow-Headers, Access-Control-Allow-Methods, Accept, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Credentials: "'true'"
+              method.response.header.Access-Control-Allow-Methods: "'GET'"
             ResponseTemplates:
               application/json: |
                 $input.path('$')
@@ -71,6 +76,11 @@ Resources:
               application/json: '{"error":"Internal server error"}'
       MethodResponses:
         - StatusCode: "200"
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Credentials: true
+            method.response.header.Access-Control-Allow-Methods: true
         - StatusCode: "400"
           ResponseModels:
             application/json: "Error"
