--- a/src/integrated-resource/appointment.yaml
+++ b/src/integrated-resource/appointment.yaml
@@ -81,6 +81,7 @@ Resources:
                         "procedure_name": {"S": "$input.path('$.appointment.procedure_name')"},
                         "doctor": {"S": "$input.path('$.appointment.doctor')"},
                         "time": {"N": "$input.path('$.appointment.time')"},
+                        "status": {"N": "$input.path('$.appointment.status')"},
                         "migrated": {"BOOL": false}
                       }
                     }
@@ -150,7 +151,7 @@ Resources:
               method.response.header.Access-Control-Allow-Methods: "'GET'"
             ResponseTemplates:
               application/json: |
-                #set($inputRoot = $input.path('$'))[#foreach($item in $inputRoot.Items)#set($grouped = {})#set($counts = {})#foreach($key in $item.keySet())#if($key != "type" && $key != "epoch")#if(!$grouped.containsKey($item[$key].M.procedure.N))#set($grouped[$item[$key].M.procedure.N] = [])#set($counts[$item[$key].M.procedure.N] = 0)#end#set($appointment = {"appointment_id": "$key","patient_id": "$util.escapeJavaScript($item[$key].M.patient_id.S)","patient_name":"$util.escapeJavaScript($item[$key].M.patient_name.S)","phone_number": "$util.escapeJavaScript($item[$key].M.phone_number.S)","procedure_id": "$util.escapeJavaScript($item[$key].M.procedure_id.S)","procedure_name": "$util.escapeJavaScript($item[$key].M.procedure_name.S)","doctor": "$util.escapeJavaScript($item[$key].M.doctor.S)","time": $item[$key].M.time.N,"attribute_name": "$util.escapeJavaScript($item[$key].M.attribute_name.S)","epoch": $item[$key].M.epoch.N,"migrated": $item[$key].M.migrated.BOOL})#set($discard = $grouped[$item[$key].M.procedure.N].add($appointment))#set($counts[$item[$key].M.procedure.N] = $counts[$item[$key].M.procedure.N] + 1)#end#end{"date": $item.epoch.N,"appointments": [#foreach($procKey in $grouped.keySet()){"procedure": $procKey,"count": $counts[$procKey],"details": $grouped[$procKey]}#if($foreach.hasNext),#end#end]}#if($foreach.hasNext),#end#end]
+                #set($inputRoot = $input.path('$'))[#foreach($item in $inputRoot.Items)#set($grouped = {})#set($counts = {})#foreach($key in $item.keySet())#if($key != "type" && $key != "epoch")#if(!$grouped.containsKey($util.escapeJavaScript($item[$key].M.procedure_id.S)))#set($grouped[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = [])#set($counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = 0)#end#set($appointment = {"appointment_id": "$key","patient_id": "$util.escapeJavaScript($item[$key].M.patient_id.S)","patient_name":"$util.escapeJavaScript($item[$key].M.patient_name.S)","phone_number": "$util.escapeJavaScript($item[$key].M.phone_number.S)","procedure_id": "$util.escapeJavaScript($item[$key].M.procedure_id.S)","procedure_name": "$util.escapeJavaScript($item[$key].M.procedure_name.S)","doctor": "$util.escapeJavaScript($item[$key].M.doctor.S)","time": $item[$key].M.time.N,"status": $item[$key].M.status.N,"attribute_name": "$util.escapeJavaScript($item[$key].M.attribute_name.S)","epoch": $item[$key].M.epoch.N,"migrated": $item[$key].M.migrated.BOOL})#set($discard = $grouped[$util.escapeJavaScript($item[$key].M.procedure_id.S)].add($appointment))#set($counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = $counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] + 1)#end#end{"date": $item.epoch.N,"appointments": [#foreach($procKey in $grouped.keySet()){"procedure_id": "$procKey","count": $counts[$procKey],"details": $grouped[$procKey]}#if($foreach.hasNext),#end#end]}#if($foreach.hasNext),#end#end]
           - StatusCode: "400"
             SelectionPattern: '4\d{2}'
             ResponseTemplates:
@@ -223,6 +224,7 @@ Resources:
                               "procedure_name": {"S": "$input.path('$.appointment.procedure_name')"},
                               "doctor": {"S": "$input.path('$.appointment.doctor')"},
                               "time": {"N": "$input.path('$.appointment.time')"},
+                              "status": {"N": "$input.path('$.appointment.status')"},
                               "migrated": {"BOOL": false}
                             }
                           }
@@ -255,6 +257,7 @@ Resources:
                               "procedure_name": {"S": "$input.path('$.appointment.procedure_name')"},
                               "doctor": {"S": "$input.path('$.appointment.doctor')"},
                               "time": {"N": "$input.path('$.appointment.time')"},
+                              "status": {"N": "$input.path('$.appointment.status')"},
                               "migrated": {"BOOL": false}
                             }
                           }
