--- a/src/lambda-functions/import-material/import-material.yaml
+++ b/src/lambda-functions/import-material/import-material.yaml
@@ -181,3 +181,32 @@ Resources:
               Action:
                 - "rds:*"
               Resource: "*"
+
+  GetImportMaterialByDateFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: get-by-date-to-date
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /import-material/date/{start-date}/{end-date}/{paging}
+            Method: get
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
