--- a/src/lambda-functions/material-usage/material-usage.yaml
+++ b/src/lambda-functions/material-usage/material-usage.yaml
@@ -66,6 +66,35 @@ Resources:
                 - "rds:*"
               Resource: "*"
 
+  AddProcedureMaterialUsageFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: add-procedure-usage
+      Handler: app.lambda_handler
+      Runtime: python3.8
+      Layers:
+        - !Ref PyMySQLLayerArn
+      Environment:
+        Variables:
+          HOST: !Ref DBHost
+          DATABASE: !Ref Database
+          USERNAME: !Ref Username
+          PASSWORD: !Ref Password
+      Events:
+        CreateActivities:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MyApi
+            Path: /material-usage/procedure
+            Method: post
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - "rds:*"
+              Resource: "*"
+
   GetByTreatmentCourseIdFunction:
     Type: AWS::Serverless::Function
     Properties:
