--- a/src/lambda-functions/staff/staff.yaml
+++ b/src/lambda-functions/staff/staff.yaml
@@ -47,6 +47,7 @@ Resources:
       Runtime: python3.8
       Environment:
         Variables:
+          USER_POOL_ID: !Ref UserPoolId
           USERPOOLID: !Ref UserPoolId
       Events:
         CreateActivities:
